code/app/styles/styles.css
/**********************************
GENERAL
***********************************/

body {
  background: #fff;
  max-width: 1170px;
  margin: 0 auto;
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  letter-spacing: 1px;
  word-spacing: -1px;
  line-height: 22px;
  color: #7a7a7a;
}

/**********************************
TOP HEADER
***********************************/

.top-header {
  font-weight: 500;
  font-size: 12px;
  letter-spacing: 3px;
  text-transform: uppercase;
  
}

.top-header ul {
  list-style: none;
  padding: 0;
  
}

.top-header li {
  display: inline-block;
    
}

.top-header li:nth-child(n+2) {
  background-image: url('../img/header-nav-bar.png');
  background-repeat: no-repeat;
  background-size: 37px 2px;
  background-position: left center;
  
}

.top-header a {
  padding: 6px 0;
  text-decoration: none;
  color: #7a7a7a;
  
 }

.top-header a.selected, .top-header ul a:hover {
  color: #252525;
  border-bottom: 1px solid #252525;
  
}

/**********************************
TOP HEADER - HOME
***********************************/

.header-home {
  float: left;
  margin: 116px 0 80px;
  padding: 0;
  width: 100%;
  
} 

.header-home nav {
  width: 80%;
  float: right;
  text-align: right;
  
}

.header-home ul {
  margin: 36px 0 0;

}

.header-home li {
  padding: 0 7px 0 53px;
  
}

.header-home li:last-child {
  padding-right: 0;
  
}

/**********************************
TOP HEADER - INTERNAL
***********************************/

.header-internal {
  float: left;
  margin: 86px 0 80px;
  padding: 0;
  width: 100%;
  text-align: center;
  
}

.header-internal ul {
  margin-top: 53px;
  
}
  
.header-internal li {
  padding: 0 12px 0 58px;
  
}

.header-internal li:first-child {
  padding-left: 0;
  
}

.header-internal li:last-child {
  padding-right: 0;
  
}

/**********************************
FOOTER
***********************************/

footer {
  width: 100%;
  float: left;
  border-top: 1px solid #252525;
  padding-top: 32px;
  font-size: 13px;
  
}

footer h5 {
  font-weight: 500;
  font-size: 12px;
  color: #252525;
  
}

.footer-van, .footer-inst {
  width: 385px;
  text-align: center;
  
}

.footer-van ul, .footer-inst ul {
  list-style: none;
  padding: 0;
  
}

.footer-van li, .footer-inst li {
  display: inline-block;
  
}

.footer-van-logo {
  margin-top: 33px;
  
}

.footer-van h5 {
  margin: 30px 0 32px 0;
  letter-spacing: 3px;
  
}

.footer-van li:nth-child(n+2) {
  padding-left: 30px;

}

.footer-twit {
  width: 330px;
  text-align: center;
  padding: 33px 34px;
  border-left: 1px solid #d0d0d0;
  border-right: 1px solid #d0d0d0;
}

.footer-twit h5, .footer-inst h5 {
  background-image: url(../img/footer-h5-bar.png);
  background-size: 40px 1px;
  background-repeat: no-repeat;
  background-position: bottom center;
  padding-bottom: 7px;
  
}

.footer-twit h5 {
  margin: 10px 0 18px 0;
  
}

.footer-twit p {
  margin-top: 0;
  margin-bottom: 0;
  
}

.footer-twit p:last-child {
  color: #000;
    
}

.footer-inst {
  padding: 33px 0;
}

.footer-inst h5 {
  margin: 8px 0 21px 0;
}

.footer-inst ul {
  margin: 0 0 0 12px;

}

.footer-inst li {
  width: 119px;
  height: 77px;
  background-color: #858585;
  
}

.footer-inst li:nth-child(n+2) {
  margin-left: 3.5px;
  
}

.footer-copy {
  text-align: center;
  font-family: 'Playfair Display', serif;
  font-style: italic;
  font-size: 12px;
  border-top: 1px solid #252525;
  padding-top: 28px;
  
}

.footer-copy p {
  margin-top: 0;
  margin-bottom: 27px;
  
}

